tests/variant_flow/flow_switch_in_loop_widens_variant_correctly.err.expected
error: at 9:17: [VF-SwitchArmFalselyUnreachable] In function 'f', block 'head': switchEnum arm for variant 'Some' claims unreachable but variant is reachable at this point
   |
 9 |                 switchEnum(o) [None: body, Some: dead]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
